--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     for (let c of toConvert.split('')) {
       if (c.match(/^[A-Za-z]+$/)) {
+		c = c.toLowerCase();
         converted += ":regional_indicator_" + c + ":"
       } else if (c.match(/[0-9]/)) {
         switch (c) {
